<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBlack"
    tools:context=".ui.act.FreeAgentGetStartedAct">


    <ImageView
        android:layout_marginTop="0dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/splash2"
        android:contentDescription="@string/app_name" />

    <RelativeLayout
        android:id="@+id/rl_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"

        >

        <ImageView
            android:layout_marginTop="10dp"
            android:id="@+id/iv_image"
            android:layout_centerVertical="true"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/ic_logo"
            android:contentDescription="@string/app_name" />

        <TextView
            android:id="@+id/tv_free_agent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@+id/iv_image"
            android:textSize="36sp"
            android:text="@string/label_free_agent"
            android:textColor="@color/colorWhite" />

    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/rl_getStarted"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:gravity="center_vertical|center_horizontal"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/button_started"
        android:layout_above="@+id/rl_login"
        >

        <TextView
            android:id="@+id/tv_get_started"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_get_started"
            android:textColor="@color/change_color5"
            android:textStyle="bold"
            android:textSize="26sp"
            />

    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/rl_login"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:gravity="bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="40dp"
        >

        <TextView
            android:id="@+id/tv_already_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_already_have_a_account"
            android:textColor="@color/colorWhite"
            android:textSize="18sp"
             />

        <TextView
            android:id="@+id/tv_MainMenuLogin"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@+id/tv_already_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_login"
            android:textSize="18sp"
            android:textColor="@color/colorBlue0"
            />

    </RelativeLayout>

</RelativeLayout>