<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    tools:context=".ui.act.FreeAgentGetStartedAct">

    <ImageView
        android:id="@+id/iv_back_fp"
        android:layout_marginTop="30dp"
        android:layout_marginStart="10dp"
        android:layout_alignParentStart="true"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:src="@drawable/ic_back"
        android:contentDescription="@string/app_name" />

    <TextView
        android:id="@+id/tv_forgot_password_fp"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/iv_back_fp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/label_forgot_password"
        android:textColor="@color/colorBlack"
        android:textStyle="bold"
        android:textSize="20sp"
        />

    <TextView
        android:id="@+id/tv_enter_phone"
        android:layout_marginTop="20dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:layout_below="@+id/tv_forgot_password_fp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:text="@string/label_forgot_password_desc"
        android:textColor="@color/colorBlack"
        android:textStyle="normal"
        android:textSize="16sp"
        />


    <RelativeLayout
        android:id="@+id/rl_form_fp"
        android:layout_below="@+id/tv_enter_phone"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp">


        <EditText
            android:id="@+id/edtEmail_fp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:autofillHints=""
            android:hint="@string/label_email"
            android:inputType="textEmailAddress"
            android:maxLength="60"
            android:textColor="@color/colorBlack"
            android:textSize="16sp"/>



    </RelativeLayout>



    <RelativeLayout
        android:id="@+id/rl_submit_fp"
        android:layout_below="@+id/rl_form_fp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:gravity="center_vertical|center_horizontal"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/button_login"
        >

        <TextView
            android:id="@+id/tv_submit_fp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_submit"
            android:textColor="@color/colorWhite"
            android:textStyle="bold"
            android:textSize="18sp"
            />

    </RelativeLayout>


    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_marginTop="5dp"
        android:layout_below="@+id/rl_submit_fp"
        android:indeterminate="true"
        android:layout_centerVertical="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        tools:visibility="visible"
        />

</RelativeLayout>