<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    tools:context=".ui.act.FreeAgentGetStartedAct">



    <ImageView
        android:id="@+id/iv_close_login"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:layout_alignParentEnd="true"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:src="@drawable/ic_close"
        android:contentDescription="@string/app_name" />

    <ImageView
        android:layout_marginTop="50dp"
        android:id="@+id/iv_image_login"
        android:layout_centerHorizontal="true"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:src="@drawable/icon_blue"
        android:contentDescription="@string/app_name" />


    <RelativeLayout
        android:id="@+id/rl_form"
        android:layout_below="@+id/iv_image_login"
        android:layout_marginTop="40dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp">


        <EditText
            android:id="@+id/edtEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:autofillHints=""
            android:text="@string/user_test"
            android:hint="@string/label_email"
            android:inputType="textEmailAddress"
            android:maxLength="60"
            android:textColor="@color/colorBlack"
            android:textSize="16sp"/>

        <EditText
            android:id="@+id/edtPassword"
            android:layout_below="@+id/edtEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:autofillHints=""
            android:text="@string/password_test"
            android:hint="@string/label_password"
            android:inputType="textPassword"
            android:maxLength="50"
            android:textColor="@color/colorBlack"
            android:textSize="16sp"/>

    </RelativeLayout>



    <RelativeLayout
        android:id="@+id/rl_login"
        android:layout_below="@+id/rl_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:gravity="center_vertical|center_horizontal"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/button_login"
        >

        <TextView
            android:id="@+id/tv_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_login"
            android:textColor="@color/change_color1"
            android:textStyle="bold"
            android:textSize="18sp"
            />

    </RelativeLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_marginTop="5dp"
        android:layout_below="@+id/rl_login"
        android:indeterminate="true"
        android:layout_centerVertical="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        tools:visibility="visible"
        />


    <TextView
        android:id="@+id/tv_forgot_password"
        android:layout_marginTop="40dp"
        android:layout_below="@+id/rl_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/label_forgot_password"
        android:textColor="@color/change_color4"
        android:textStyle="normal"
        android:textSize="18sp"
        />


    <RelativeLayout
        android:id="@+id/rl_witness_something"
        android:layout_below="@+id/tv_forgot_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:gravity="center_vertical|center_horizontal"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/button_witness"
        >

        <TextView
            android:id="@+id/tv_witness_something"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_witness_something"
            android:textColor="@color/change_color4"
            android:textStyle="normal"
            android:textSize="18sp"
            />

    </RelativeLayout>

</RelativeLayout>